force-app/main/default/objects/Ticket__c/Ticket__c.object-meta.xml
<CustomObject>
    <label>Ticket</label>
    <nameField>
        <displayFormat>Ticket-{00000000}</displayFormat>
        <label>Action Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>