force-app/main/default/objects/Ticket__c/fields/AAS_Eligible__c.field-meta.xml
<CustomField>
    <fullName>AAS_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AAS Eligible?</label>
    <type>Checkbox</type>
</CustomField>