force-app/main/default/objects/Ticket__c/fields/Access_to_Care__c.field-meta.xml
<CustomField>
    <fullName>Access_to_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Access to Care</label>
    <type>Checkbox</type>
</CustomField>