force-app/main/default/objects/Ticket__c/fields/Benefit_Order__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Benefit Order</label>
    <referenceTo>Benefit_Order__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>