force-app/main/default/objects/Ticket__c/fields/Benefits_Care_Team__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Care_Team__c</fullName>
    <label>Benefits Care Team</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Team__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amber Anderson</fullName>
            </value>
            <value>
                <fullName>Claire Joksimovic</fullName>
            </value>
            <value>
                <fullName>Cloe Mason</fullName>
            </value>
            <value>
                <fullName>Grace Carpenter</fullName>
            </value>
            <value>
                <fullName>Kendall Finch</fullName>
            </value>
            <value>
                <fullName>Laura BArnick</fullName>
            </value>
            <value>
                <fullName>Mary Tallon</fullName>
            </value>
            <value>
                <fullName>Michelle Jelsma</fullName>
            </value>
            <value>
                <fullName>Michelle Vieira</fullName>
            </value>
            <value>
                <fullName>Misty Smith</fullName>
            </value>
            <value>
                <fullName>Patrick Stevens</fullName>
            </value>
            <value>
                <fullName>Sara Elbeheiry</fullName>
            </value>
            <value>
                <fullName>Sonia Chowdhury</fullName>
            </value>
            <value>
                <fullName>Stephanie Rosalio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>