force-app/main/default/objects/Ticket__c/fields/Block_Ring_Lead_Routing__c.field-meta.xml
<CustomField>
    <fullName>Block_Ring_Lead_Routing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The field blocks Ring Lead routing of Tickets.
Used in Ardius &amp; populated by before triggers.</description>
    <label>Block Ring Lead Routing</label>
    <type>Checkbox</type>
</CustomField>