force-app/main/default/objects/Ticket__c/fields/Blocked_Reason__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Reason__c</fullName>
    <description>Specifies Ardius Ticket Hold reason.</description>
    <label>Hold Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Books not closed</fullName>
            </value>
            <value>
                <fullName>Bug resolution in progress</fullName>
            </value>
            <value>
                <fullName>Claiming Multi-Years</fullName>
            </value>
            <value>
                <fullName>Control Group Onboarding</fullName>
            </value>
            <value>
                <fullName>Data Integration Issue</fullName>
            </value>
            <value>
                <fullName>Data resolution</fullName>
            </value>
            <value>
                <fullName>Order form</fullName>
            </value>
            <value>
                <fullName>Past due invoice</fullName>
            </value>
            <value>
                <fullName>Pending Additional Docs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>