force-app/main/default/objects/Ticket__c/fields/Broker_s_Resident_License__c.field-meta.xml
<CustomField>
    <fullName>Broker_s_Resident_License__c</fullName>
    <label>Gusto Home Base</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CO</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>NY</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
            <value>
                <fullName>SF</fullName>
                <isActive>false</isActive>
                <label>SF</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>