force-app/main/default/objects/Ticket__c/fields/Broker_s_Team__c.field-meta.xml
<CustomField>
    <fullName>Broker_s_Team__c</fullName>
    <label>Broker&apos;s Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Advising</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>