force-app/main/default/objects/Ticket__c/fields/Carrier_Order__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carrier Order</label>
    <referenceTo>Carrier_Order__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>