force-app/main/default/objects/Ticket__c/fields/Company_Admin__c.field-meta.xml
<CustomField>
    <fullName>Company_Admin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To specify Company Admin of the Ticket</description>
    <label>Company Admin</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tickets (Company Admin)</relationshipLabel>
    <relationshipName>Tickets1</relationshipName>
    <type>Lookup</type>
</CustomField>