force-app/main/default/objects/Ticket__c/fields/Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Company_ID__c</fullName>
    <description>This will get the ZP Company ID from UI Path</description>
    <label>Company ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>