force-app/main/default/objects/Ticket__c/fields/Completed_with_Instabase__c.field-meta.xml
<CustomField>
    <fullName>Completed_with_Instabase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for QC Error Migration</description>
    <label>Completed with Instabase</label>
    <type>Checkbox</type>
</CustomField>