force-app/main/default/objects/Ticket__c/fields/Confirmed_Ticket_Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Ticket_Reason_Detail__c</fullName>
    <label>Confirmed Ticket Reason Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Confirmed_Ticket_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2% shareholder issues</fullName>
            </value>
            <value>
                <fullName>2-Day</fullName>
            </value>
            <value>
                <fullName>2-Day Approval</fullName>
            </value>
            <value>
                <fullName>2-Day Suspension</fullName>
            </value>
            <value>
                <fullName>Access to Care</fullName>
            </value>
            <value>
                <fullName>Account Access Issue</fullName>
            </value>
            <value>
                <fullName>Active policy not added</fullName>
            </value>
            <value>
                <fullName>Add affiliate company</fullName>
            </value>
            <value>
                <fullName>Adding a TAdA</fullName>
            </value>
            <value>
                <fullName>Additional Information Received</fullName>
            </value>
            <value>
                <fullName>Add medical plan</fullName>
            </value>
            <value>
                <fullName>Add new line of coverage</fullName>
            </value>
            <value>
                <fullName>All of the above</fullName>
            </value>
            <value>
                <fullName>Ancillary coverage</fullName>
            </value>
            <value>
                <fullName>Ancillary coverage + TaDAs</fullName>
            </value>
            <value>
                <fullName>Approval</fullName>
            </value>
            <value>
                <fullName>Approval ($150K or more)</fullName>
            </value>
            <value>
                <fullName>ATO</fullName>
            </value>
            <value>
                <fullName>BASIC Documentation</fullName>
            </value>
            <value>
                <fullName>Beam ID</fullName>
            </value>
            <value>
                <fullName>Benefits Cancelled</fullName>
            </value>
            <value>
                <fullName>Benefits questions</fullName>
            </value>
            <value>
                <fullName>Benefits through a trust</fullName>
            </value>
            <value>
                <fullName>BoR Demographic</fullName>
            </value>
            <value>
                <fullName>BoR Other</fullName>
            </value>
            <value>
                <fullName>BoR Quoting Scheme</fullName>
            </value>
            <value>
                <fullName>BoR Rater</fullName>
            </value>
            <value>
                <fullName>Bundle ancillary</fullName>
            </value>
            <value>
                <fullName>Bundle of Plans Does Not Meet Requirments</fullName>
            </value>
            <value>
                <fullName>Bundle of plans not allowed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>