force-app/main/default/objects/Ticket__c/fields/Control_Group__c.field-meta.xml
<CustomField>
    <fullName>Control_Group__c</fullName>
    <description>Represents Ardius Control Group of the Company.</description>
    <formula>IF( !ISBLANK( Account__c ) ,  Account__r.Control_Group__c ,  Opportunity__r.Account.Control_Group__c )</formula>
    <label>Control Group</label>
    <type>Text</type>
</CustomField>