force-app/main/default/objects/Ticket__c/fields/Credit_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Credit_Estimate__c</fullName>
    <description>gets populated via the integration,Ardius team to make this update happen</description>
    <label>Credit Estimate</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>