force-app/main/default/objects/Ticket__c/fields/Discount_Amount_Requested__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount_Requested__c</fullName>
    <label>Discount Amount Requested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>