force-app/main/default/objects/Ticket__c/fields/Error_Origin_Date__c.field-meta.xml
<CustomField>
    <fullName>Error_Origin_Date__c</fullName>
    <description>This Field is for the dated the Origin Error Occurred and should be filled out when a ticket is created.</description>
    <inlineHelpText>The date that the error occurred.</inlineHelpText>
    <label>Error Origin Date</label>
    <type>Date</type>
</CustomField>