force-app/main/default/objects/Ticket__c/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <description>Error types for Benefit Compliance Tickets.</description>
    <label>Error Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Escalation_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TAdA</fullName>
            </value>
            <value>
                <fullName>QSEHRA</fullName>
            </value>
            <value>
                <fullName>Continuation / COBRA</fullName>
            </value>
            <value>
                <fullName>Ghost Plan</fullName>
            </value>
            <value>
                <fullName>Untimely Communication</fullName>
            </value>
            <value>
                <fullName>Gusto Fees Refund</fullName>
            </value>
            <value>
                <fullName>Payroll Issue</fullName>
            </value>
            <value>
                <fullName>Missed / Incorrect Submission</fullName>
            </value>
            <value>
                <fullName>Plan Mismatch</fullName>
            </value>
            <value>
                <fullName>Carrier Error</fullName>
            </value>
            <value>
                <fullName>System Limitation</fullName>
            </value>
            <value>
                <fullName>Mistriaged</fullName>
            </value>
            <value>
                <fullName>Benefits System Limitation</fullName>
            </value>
            <value>
                <fullName>Payroll System Limitation</fullName>
            </value>
            <value>
                <fullName>Benefits Product Bug</fullName>
            </value>
            <value>
                <fullName>Payroll Product Bug</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>BYB Transition</fullName>
            </value>
            <value>
                <fullName>Other System Limitations</fullName>
            </value>
            <value>
                <fullName>Multi-EIN Issue</fullName>
            </value>
            <value>
                <fullName>Continuation / COBRA </fullName>
                <isActive>false</isActive>
                <label>Continuation / COBRA </label>
            </value>
            <value>
                <fullName>Gusto Fees Refund </fullName>
                <isActive>false</isActive>
                <label>Gusto Fees Refund </label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>