force-app/main/default/objects/Ticket__c/fields/ErrorDetectionSource__c.field-meta.xml
<CustomField>
    <fullName>ErrorDetectionSource__c</fullName>
    <description>Used by EQ to track when issues are initially flagged by the employer or caught by a Gustie</description>
    <inlineHelpText>[Customer Reported - Errors flagged by customers ; Internal Detection - Errors identified by Gusto before the customer reached out]</inlineHelpText>
    <label>Error Detection Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Reported</fullName>
            </value>
            <value>
                <fullName>Internal Detection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>