force-app/main/default/objects/Ticket__c/fields/Escalation_Question_Details__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Question_Details__c</fullName>
    <description>Used to indicate additional details regarding question or escalation</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Escalation / Question Details</label>
    <type>TextArea</type>
</CustomField>