force-app/main/default/objects/Ticket__c/fields/Escalation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Reason__c</fullName>
    <label>Ticket Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2% shareholder</fullName>
            </value>
            <value>
                <fullName>2-day</fullName>
            </value>
            <value>
                <fullName>2 day issue</fullName>
            </value>
            <value>
                <fullName>2-Day Payroll</fullName>
            </value>
            <value>
                <fullName>ACA Filing</fullName>
                <label>ACA Filings (1095)</label>
            </value>
            <value>
                <fullName>Account Access Issue</fullName>
            </value>
            <value>
                <fullName>Account Takeover Investigations</fullName>
            </value>
            <value>
                <fullName>ACH Fraud Dispute</fullName>
            </value>
            <value>
                <fullName>Admin Change</fullName>
            </value>
            <value>
                <fullName>Affiliate Company</fullName>
            </value>
            <value>
                <fullName>Alignment</fullName>
            </value>
            <value>
                <fullName>Alignment Discrepancy</fullName>
            </value>
            <value>
                <fullName>Mid-Year Ancillary Upsell</fullName>
                <label>Ancillary Upsell - Advising Required</label>
            </value>
            <value>
                <fullName>Assistance needed from ER</fullName>
            </value>
            <value>
                <fullName>ATO</fullName>
            </value>
            <value>
                <fullName>ATO - No Exposure</fullName>
            </value>
            <value>
                <fullName>Audit Error Found</fullName>
            </value>
            <value>
                <fullName>Automation Error</fullName>
            </value>
            <value>
                <fullName>Bank Errors Rejection</fullName>
            </value>
            <value>
                <fullName>Benefits Question</fullName>
            </value>
            <value>
                <fullName>Benefits Suspended</fullName>
            </value>
            <value>
                <fullName>Benefit Suspension/BoR Away</fullName>
            </value>
            <value>
                <fullName>Blocked Submission</fullName>
            </value>
            <value>
                <fullName>BoR Status update</fullName>
            </value>
            <value>
                <fullName>Broker Care</fullName>
            </value>
            <value>
                <fullName>Business Dispute</fullName>
            </value>
            <value>
                <fullName>Business setup issues</fullName>
            </value>
            <value>
                <fullName>BVM (MOps Use Only)</fullName>
            </value>
            <value>
                <fullName>BYB 2nd BYB</fullName>
            </value>
            <value>
                <fullName>BYB Change request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>