force-app/main/default/objects/Ticket__c/fields/Founded_Year__c.field-meta.xml
<CustomField>
    <fullName>Founded_Year__c</fullName>
    <description>Created for Ardius.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Founded Year</label>
    <length>20</length>
    <type>Text</type>
</CustomField>