force-app/main/default/objects/Ticket__c/fields/From_Sub_Team_s__c.field-meta.xml
<CustomField>
    <fullName>From_Sub_Team_s__c</fullName>
    <description>Created for QC Error Migration</description>
    <label>From Sub-Team(s)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Implementation Advocate</fullName>
            </value>
            <value>
                <fullName>Advocate</fullName>
            </value>
            <value>
                <fullName>Qualifier</fullName>
            </value>
            <value>
                <fullName>Facilitator 1</fullName>
            </value>
            <value>
                <fullName>Facilitator 2</fullName>
            </value>
            <value>
                <fullName>Benefit Transfer Fulfillment</fullName>
            </value>
            <value>
                <fullName>Mid Market Sales</fullName>
            </value>
            <value>
                <fullName>Partner Sales</fullName>
            </value>
            <value>
                <fullName>Small Business Sales</fullName>
            </value>
            <value>
                <fullName>Payroll Transfer</fullName>
            </value>
            <value>
                <fullName>Fulfillment</fullName>
            </value>
            <value>
                <fullName>Confirmation</fullName>
                <isActive>false</isActive>
                <label>Confirmation</label>
            </value>
            <value>
                <fullName>Qualification</fullName>
                <isActive>false</isActive>
                <label>Qualification</label>
            </value>
            <value>
                <fullName>Submission</fullName>
                <isActive>false</isActive>
                <label>Submission</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>