force-app/main/default/objects/Ticket__c/fields/Fulfillment_Case__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fulfillment Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Tickets (Advising Case)</relationshipLabel>
    <relationshipName>Tickets1</relationshipName>
    <type>Lookup</type>
</CustomField>