force-app/main/default/objects/Ticket__c/fields/Goes_back_to_Original_Owner_when_Closed__c.field-meta.xml
<CustomField>
    <fullName>Goes_back_to_Original_Owner_when_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Goes back to Original Owner when Closed</label>
    <type>Checkbox</type>
</CustomField>