force-app/main/default/objects/Ticket__c/fields/ICP_Indicator__c.field-meta.xml
<CustomField>
    <fullName>ICP_Indicator__c</fullName>
    <description>Tax Credits Ideal Customer Profile indicated - Updated via Ardius.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ICP Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>