force-app/main/default/objects/Ticket__c/fields/Implementation_Miss__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Miss__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Implementation Miss</label>
    <type>Checkbox</type>
</CustomField>