force-app/main/default/objects/Ticket__c/fields/Initial_Status__c.field-meta.xml
<CustomField>
    <fullName>Initial_Status__c</fullName>
    <description>Used by Benefit Transfer team</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Initial Status</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>