force-app/main/default/objects/Ticket__c/fields/InProgress_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>InProgress_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>In Progress Date/Time</label>
    <type>DateTime</type>
</CustomField>