force-app/main/default/objects/Ticket__c/fields/Is_Ticket_Owner_Benefits_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Is_Ticket_Owner_Benefits_Compliance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Ticket Owner Benefits Compliance</label>
    <type>Checkbox</type>
</CustomField>