force-app/main/default/objects/Ticket__c/fields/Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date__c</fullName>
    <description>Tracks Task, Event and Meeting updates of an Ardius Ticket</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Activity Date</label>
    <type>DateTime</type>
</CustomField>