force-app/main/default/objects/Ticket__c/fields/Lost_Detail__c.field-meta.xml
<CustomField>
    <fullName>Lost_Detail__c</fullName>
    <label>Lost Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>Accountant intervention</fullName>
            </value>
            <value>
                <fullName>Account flagged / suspended in Panda</fullName>
            </value>
            <value>
                <fullName>Account suspended</fullName>
            </value>
            <value>
                <fullName>Already working with a competitor</fullName>
            </value>
            <value>
                <fullName>Company went out of business</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Customer confusion</fullName>
            </value>
            <value>
                <fullName>Disqualified by CSM</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>Not pursuing credits this year</fullName>
            </value>
            <value>
                <fullName>Out of business</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Redemption only</fullName>
            </value>
            <value>
                <fullName>Tax related concern</fullName>
            </value>
            <value>
                <fullName>Unable to file this year</fullName>
            </value>
            <value>
                <fullName>Unknown / Customer unresponsive</fullName>
                <isActive>false</isActive>
                <label>Unknown / Customer unresponsive</label>
            </value>
            <value>
                <fullName>Value prop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>