force-app/main/default/objects/Ticket__c/fields/New_Limit_Requested__c.field-meta.xml
<CustomField>
    <fullName>New_Limit_Requested__c</fullName>
    <label>New Limit Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>