force-app/main/default/objects/Ticket__c/fields/Order_Submission_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Order_Submission_Deadline__c</fullName>
    <formula>IF( Carrier_Order__c != null,  Carrier_Order__r.Submission_Deadline_Date__c ,  Benefit_Order__r.Submission_Deadline__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Submission Deadline</label>
    <type>Date</type>
</CustomField>