force-app/main/default/objects/Ticket__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <description>BD Ticket</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Required: Please describe what steps you&apos;ve taken to research or resolve this ticket</inlineHelpText>
    <label>Attempted Resolution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>