force-app/main/default/objects/Ticket__c/fields/Panda_Nacha_ID__c.field-meta.xml
<CustomField>
    <fullName>Panda_Nacha_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Panda Nacha ID</label>
    <type>TextArea</type>
</CustomField>