force-app/main/default/objects/Ticket__c/fields/PIQ_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>PIQ_Completion_Date__c</fullName>
    <label>Survey Completion Date</label>
    <type>Date</type>
</CustomField>