force-app/main/default/objects/Ticket__c/fields/Prevent_Error__c.field-meta.xml
<CustomField>
    <fullName>Prevent_Error__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prevent Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>