force-app/main/default/objects/Ticket__c/fields/QA_Error__c.field-meta.xml
<CustomField>
    <fullName>QA_Error__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QA Error</label>
    <referenceTo>QA_Errors__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>