force-app/main/default/objects/Ticket__c/fields/Reapproval_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reapproval_Reason__c</fullName>
    <description>To specify reason for re-approval</description>
    <label>Reapproval Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>280(c) election</fullName>
            </value>
            <value>
                <fullName>Change in calc method</fullName>
            </value>
            <value>
                <fullName>Internal QA</fullName>
            </value>
            <value>
                <fullName>Payment plan adjustment</fullName>
            </value>
            <value>
                <fullName>Provider error</fullName>
            </value>
            <value>
                <fullName>QRE adjustment</fullName>
            </value>
            <value>
                <fullName>Utilization change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>