force-app/main/default/objects/Ticket__c/fields/Reason_for_Wage_Correction__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Wage_Correction__c</fullName>
    <description>Field created for Solution Engineer Request.</description>
    <label>Reason for Wage Correction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WA Qualified Sick Leave</fullName>
            </value>
            <value>
                <fullName>Neg Net Pay (FIT/SIT Adjustments)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>