force-app/main/default/objects/Ticket__c/fields/Reimbursement_Amount_Requested__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Amount_Requested__c</fullName>
    <label>Reimbursement Amount Requested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>