force-app/main/default/objects/Ticket__c/fields/Related_Help_Links__c.field-meta.xml
<CustomField>
    <fullName>Related_Help_Links__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Related Help Links</label>
    <length>255</length>
    <type>Text</type>
</CustomField>