force-app/main/default/objects/Ticket__c/fields/Requires_Action__c.field-meta.xml
<CustomField>
    <fullName>Requires_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Action</label>
    <type>Checkbox</type>
</CustomField>