force-app/main/default/objects/Ticket__c/fields/RFI_completed_1_2_business_days_ago__c.field-meta.xml
<CustomField>
    <fullName>RFI_completed_1_2_business_days_ago__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Risk Assurance checkbox for ticket submission.</description>
    <label>RFI completed &gt; 1-2 business days ago</label>
    <type>Checkbox</type>
</CustomField>