force-app/main/default/objects/Ticket__c/fields/Skip_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Skip_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Assignment</label>
    <type>Checkbox</type>
</CustomField>